# bookplate_script

./: .gitignore  README.md  dotenv_sample_file  manager.py  requirements.in  requirements.txt
lib/: helpers.py
rust_manager/: Cargo.toml  rustfmt.toml
rust_manager/src/: helpers.rs  logger.rs  main.rs  marc_xml_reader.rs
selenium_tests/: test_existenceasserts_09.py
selnium_tests/: test_existenceasserts_09.py
