[package]
name = "bookplate_script_runner"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.20"
chrono = "0.4.31"
regex = " 1.10.3"